// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletUpdate should not render if not open 1`] = `<DocumentFragment />`;

exports[`WalletUpdate should render 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 flex items-center justify-center w-full h-full overflow-y-scroll"
  >
    <div
      class="fixed z-50 w-full h-full bg-black opacity-50"
      data-testid="modal__overlay"
    />
    <div
      class="sc-AxiKw cTRlJa absolute left-0 right-0 z-50 flex flex-col p-10 mx-auto mb-24 overflow-hidden rounded-xl bg-theme-background "
      data-testid="modal__inner"
    >
      <div
        class="absolute top-0 right-0 z-50 mt-5 mr-5 rounded bg-theme-primary-100 hover:text-white hover:bg-theme-neutral-900"
      >
        <button
          class="sc-AxjAm goVygI w-11 h-11"
          color="primary"
          data-testid="modal__close-btn"
          type="button"
        >
          <div
            class="sc-AxirZ fFqjhX"
            height="14"
            width="14"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </button>
      </div>
      <div
        class="relative"
      >
        <h2
          class="mb-0 text-3xl font-bold"
        >
          Wallet Update 3.0.7
        </h2>
        <div
          class="flex-1"
        >
          <svg
            class="my-8"
          >
            wallet-update.svg
          </svg>
          <div>
            <div
              data-testid="tab-pabel__active-panel"
            >
              <section
                data-testid="WalletUpdate__first-step"
              >
                <div
                  class="mb-8 text-center"
                >
                  <p
                    class="text-sm text-theme-neutral-dark md:text-base"
                  >
                    We are pleased to announce that a new update has been released for your wallet. You can update now or postpone the update.
                  </p>
                </div>
              </section>
            </div>
            <div
              class="flex flex-col justify-center space-x-0 sm:flex-row sm:space-x-3"
            >
              <button
                class="sc-AxjAm fPpool mt-2 sm:mt-0"
                color="primary"
                data-testid="WalletUpdate__cancel-button"
                type="button"
              >
                Update Later
              </button>
              <button
                class="sc-AxjAm kbZyZT"
                color="primary"
                data-testid="WalletUpdate__update-button"
                type="button"
              >
                Update Now
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`WalletUpdate should render 1st step 1`] = `
<DocumentFragment>
  <section
    data-testid="WalletUpdate__first-step"
  >
    <div
      class="mb-8 text-center"
    >
      <p
        class="text-sm text-theme-neutral-dark md:text-base"
      >
        We are pleased to announce that a new update has been released for your wallet. You can update now or postpone the update.
      </p>
    </div>
  </section>
</DocumentFragment>
`;

exports[`WalletUpdate should render 2st step 1`] = `
<DocumentFragment>
  <section
    data-testid="WalletUpdate__second-step"
  >
    <div
      class="flex w-2/5 mx-auto mb-8"
    >
      <div
        class="flex-1"
      >
        <p
          class="text-sm font-semibold text-theme-neutral-light"
        >
          Downloaded
        </p>
        <p
          class="text-sm font-bold text-theme-neutral-dark"
        >
          154 KB / 154 KB
        </p>
      </div>
      <div
        class="flex-1"
      >
        <div
          class="flex justify-center"
        >
          <svg
            height="50"
            viewBox="0 0 50 50"
            width="50"
          >
            <circle
              cx="25"
              cy="25"
              fill="transparent"
              r="22.5"
              stroke="var(--theme-color-success-200)"
              stroke-width="5"
            />
            <circle
              cx="25"
              cy="25"
              fill="transparent"
              r="22.5"
              stroke="var(--theme-color-success)"
              stroke-dasharray="141.3716694115407"
              stroke-dashoffset="31.101767270538943"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="5"
              transform="rotate(-90 25 25)"
            />
            <text
              data-testid="CircularProgressBar__percentage"
              dy="0.3em"
              fill="var(--theme-color-success)"
              font-size="0.8rem"
              font-weight="600"
              text-anchor="middle"
              x="50%"
              y="50%"
            >
              <tspan>
                78
                <tspan
                  dy="-0.6em"
                  font-size="0.4rem"
                  font-weight="bold"
                >
                  %
                </tspan>
              </tspan>
            </text>
          </svg>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`WalletUpdate should render 3st step 1`] = `
<DocumentFragment>
  <section
    data-testid="WalletUpdate__third-step"
  >
    <div
      class="mb-6 text-center"
    >
      <p
        class="text-sm text-theme-neutral-dark md:text-base"
      >
        Update downloaded and ready to install
      </p>
    </div>
  </section>
</DocumentFragment>
`;
